# cautious-octo-barnacle

./: CMakeLists.txt
.github/workflows/: build.yml
addons/sbhot/: loop_point_finder.gd  sbhot.gdextension
ci/: package.bash
src/: effect_ott_compressor.cpp  effect_ott_compressor.h  register_types.cpp  sbhot.cpp  sbhot.h
